# VX-Display

./: .gitignore  README.md
DAC+OLED+PWM(SDIO和TIM)/: .mxproject  BUILD_GUIDE.txt  CMakeLists.txt  DAC+OLED+PWM.ioc  PROMPT.txt  README.md  STM32F407XX_FLASH.ld  work.txt
DAC+OLED+PWM(SDIO和TIM)/Core/Inc/: beep_con.h  (+6 more)
DAC+OLED+PWM(SDIO和TIM)/MDK-ARM/: DAC+OLED+PWM.uvguix.asus  DAC+OLED+PWM.uvoptx  DAC+OLED+PWM.uvprojx  DAC2.uvguix.asus  DAC2.uvoptx  DAV+OLED+PWM.uvguix.asus  DAV+OLED+PWM.uvoptx  DAV+OLED+PWM.uvprojx
vx-display/: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32H743XX_FLASH.ld  ble.txt  instructions.txt  new_convey.txt  torus_preview.html  vx-display.ioc  work.txt
vx-display/Core/Inc/: dma.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
vx-display/Core/Src/: dma.c  gpio.c  main.c  rtc.c  sdmmc.c  stm32h7xx_it.c  tim.c  usart.c
vx-display/Core/model_data/: Zelda_Z_no_base.h
vx-display/Core/user_code/: anim_player.c  anim_player.h  anim_player_v2.c  anim_player_v2.h  anim_player_v3.c  anim_player_v3.h  brush_mode.c  brush_mode.h  bt_commands.c  bt_commands.h  interaction_sphere.c  interaction_sphere.h  led_buffer.c  led_buffer.h  motor_control.c  motor_control.h  sd_animation.c  sd_animation.h  slice_player.c  slice_player.h  snake_game.c  snake_game.h  volume_buffer.c  volume_buffer.h  volume_config.h  volume_draw.c  volume_draw.h  volume_hall.c  volume_hall.h  volume_math.c  volume_math.h  volume_to_ws2812.c  volume_to_ws2812.h  ws2812_code.c  ws2812_code.h  ws2812_driver.c  ws2812_driver.h  ws2812_enable.c  ws2812_enable.h  ws2812_gpio.c  (+3 more)
vx-display/RuiJi.Slice-master/: RuiJi.Slice.CommentGreen.vssettings  RuiJi.Slice.sln
vx-display/RuiJi.Slice-master/3DTools/Properties/: Resources.Designer.cs
vx-display/RuiJi.Slice-master/RuiJi.Slice.App/: MainWindow.xaml.cs  RuiJiCNC.cs
vx-display/RuiJi.Slice-master/RuiJi.Slice.Console/: ConsoleSliceTool.cs
vx-display/RuiJi.Slice-master/RuiJi.Slicer.Core/: Facet.cs  LineSegment.cs  PlaneFacet.cs
vx-display/RuiJi.Slice-master/RuiJi.Slicer.Core/Array/: CircleArrayCreater.cs  CircleArrayDefine.cs  LinearArrayCreater.cs  LinearArrayDefine.cs
vx-display/RuiJi.Slice-master/RuiJi.Slicer.Core/Slicer/: CircleSlicer.cs  ISlicePlane.cs  LinearSlicer.cs  SlicerHelper.cs
vx-display/RuiJi.Slice-master/RuiJi.Slicer.Core/Viewport/: SceneView.cs
vx-display/RuiJi.Slice-master/VxDisplay.Exporter/: Program.cs  VolumeExporter.cs  VxDisplay.Exporter.csproj
vx-display/cmake/: gcc-arm-none-eabi.cmake
vx-display/cmake/stm32cubemx/: CMakeLists.txt
vx-display/fbx_pipeline/: README.txt  batch_convert.py  colorize_slices.py  export_frames.py  gen_dna.py  merge_slices.py  快捷代码.txt
vx-display/upper_computer/: ble_client.py  exporter.py  main.py  palette.py  preview.py  protocol.py  vxan.py
(+228 files in other folders)
